--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
   "name": "doc-mngr",
   "version": "1.0.0",
   "description": "Desktop application that aims to find documents quickly based on the content and metadata of said documents.",
-  "main": "main.js",
+  "main": "public/main.js",
   "directories": {
     "test": "test"
   },
   "dependencies": {
-    "shadow-cljs": "^2.16.12"
-  },
-  "devDependencies": {
     "bulma": "^0.9.3",
     "electron": "^17.0.0",
-    "graphql": "^16.3.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "shadow-cljs": "^2.17.0"
   },
   "scripts": {
-    "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "shadow-cljs watch app",
+    "build": "shadow-cljs compile app",
+    "clean": "rm -rf resources/public/js/* && rm -rf target"
   },
   "repository": {
     "type": "git",
